--- a/profile-card-1.css
+++ b/profile-card-1.css
@@ -42,32 +42,37 @@ body{
     border-top: 3px solid #ffb4a2;
     border-right: 10px solid #ffb4a2;
     border-bottom: 3px solid #ffb4a2;
+    width: 65%;
+    height: auto;
 }
 
 section{
     color: #b5838d;
-    font-size: 1.5vw;
+    font-size: 1em;
     margin-left: 10px;
     margin-right: 10px;
 }
 h1{
-    font-size: 3vw;
+    font-size: 2.5em;
+    margin-bottom: -10px;
 }
 h2{
-    font-size: 2vw;
+    font-size: 1.8em;
+}
+section p{
+    margin-bottom: 30px;
 }
 
 .mail{
     color: #ffb4a2;
     background-color: #b5838d;
     padding: 10px;
-    margin-bottom: 40px;
     border-radius: 10px;
     box-shadow: 3px 3px 15px #060606;
 }
 
 footer{
-    margin-top: 20px;
+    margin-top: 40px;
     display: flex;
     justify-content: space-around;
 }
